Container and overflow fixes

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,14 +8,13 @@
 
 body,
 html {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     font-family: "Rubik", sans-serif;
 }
 
 body {
     background-color: #1b1b1b;
-    overflow-x: hidden;
 }
 
 p,
